# austere

./: .gitignore  .pylintrc  Pipfile  README.md  austere.desktop  austere.py  pyproject.toml  requirements.txt  setup.py  tasks.py
