[tool.poetry]
name = "austere"
version = "0.3.0"
description = "a default browser switcher based on material conditions & contexts"
authors = ["Jack Laxson <jackjrabbit+austere@gmail.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"
clint = "^0.5.1"
click = "^7.0"
psutil = "^5.6.7"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
