[tool.poetry]
name = "austere"
version = "0.3.0"
description = "a default browser switcher based on material conditions & contexts"
authors = ["Jack Laxson <jackjrabbit+austere@gmail.com>"]
license = "GPL-3.0+"
include = ["austere.desktop"]
[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
psutil = "^5.6.7"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]
wheel = "^0.33.6"
invoke = "^1.3.0"
flake8 = "^3.7.9"
mypy = "^0.761"

[tool.poetry.scripts]
austere = 'austere:cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
